# ETF150-Plan

./: .gitignore  150ETF.md  CLAUDE.md  README.md  pyproject.toml
docs/decisions/: ADR-001-akshare-data-boundaries.md
scripts/: verify.sh
src/etf150/: __init__.py  cli.py  config.py  models.py  streamlit_app.py
src/etf150/backtest/: __init__.py  engine.py  metrics.py
src/etf150/data/: cache.py
src/etf150/data/providers/: akshare_provider.py  akshare_utils.py  base.py  mock.py
src/etf150/reporting/: charts.py  console.py
src/etf150/services/: __init__.py  app.py
src/etf150/strategy/: position.py  risk.py  rotation.py  signals.py  units.py
src/etf150/valuation/: __init__.py  engine.py  percentile.py
tests/: test_akshare_provider.py  test_backtest.py  test_cli.py  test_iopv.py  test_percentile.py  test_position_strategy.py  test_rotation.py  test_services.py  test_streamlit_smoke.py  test_unit_logic.py  test_valuation_engine.py
