[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etf150"
version = "0.1.0"
description = "ETF 150 plan investment decision support CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.16.0",
  "matplotlib>=3.9.0",
  "pandas>=2.2.0",
  "streamlit>=1.44.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
etf150 = "etf150.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
